Added frontend changes and missing backend files

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,4 +1,5 @@
-<h1>Contact us</h1>
+<h1>Welcome to the School Course Management</h1>
+<h3>Please login to be able to use the application!</h3>
 
 <form [formGroup]="messageForm" (ngSubmit)="onSubmit()">
 
