--- a/frontend/src/app/courses/courses.component.html
+++ b/frontend/src/app/courses/courses.component.html
@@ -10,18 +10,33 @@
 
   <hr>
 
-  <h3>Courses</h3>
+
 
   <div *ngIf="!admin">
+    <h3>Enrolled Courses</h3>
+
     <ul>
       <li *ngFor="let course of courses">
+        <button type="button" name="{{ course.name }}">Remove</button> &nbsp;
         <strong>{{course.date | date:'dd/MM/yyyy'}}:</strong> {{ course.name }}
       </li>
     </ul>
+
+
+    <h3>Available Courses</h3>
+    <ul>
+      <li *ngFor="let availableCourse of availableCourses">
+        <button type="button" name="{{ availableCourse.name }}">Enroll</button> &nbsp;
+        <strong>{{availableCourse.date | date:'dd/MM/yyyy'}}:</strong> {{ availableCourse.name }}
+      </li>
+
+    </ul>
+
   </div>
 
   <div *ngIf="admin">
-<!--    todo: show all course registrations-->
+<!--    todo: show all course registrations -->
+<!--    todo: allow assigning and removing students from courses if admin -->
   </div>
 
 </div>
