--- a/frontend/src/app/operations/operations.component.html
+++ b/frontend/src/app/operations/operations.component.html
@@ -1,21 +1,9 @@
-<h1 [style.color]="h1Style ? 'blue' : 'black'">Home</h1>
+<h1>Log List</h1>
 
-<h2 [ngClass]="{
-  'gray' : h1Style,
-  'large' : !h1Style
-}">Some other text</h2>
+<p><button type="button">Clear Logs</button></p>
 
-<h3 [ngStyle] = "{
-  'color': h1Style ? 'blue' : 'green',
-  'font-size': !h1Style ? '1em' : '4em'
-}">another line</h3>
-
-<button (click)="firstClick()">Click me</button>
-
-
-<ul *ngIf="users">
-  <li *ngFor="let user of users.data">
-    <img [src]="user.avatar">
-    <p>{{ user.first_name }} {{ user.last_name }}</p>
+<ul *ngIf="logs">
+  <li *ngFor="let log of logs">
+    <p><strong>{{log.timestamp | date:'dd/MM/yyyy hh:mm'}}:</strong> {{ log.logMessage}}</p>
   </li>
 </ul>
